--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,14 @@
     <string name="time_after">x hours after medicine y</string>
     <string name="instruction_templates">Instruction templates</string>
     <string name="instructions_label">Additional instructions (e.g. before meals)</string>
+    <string name="backup_medicine">Backup medicine settings</string>
+    <string name="csv" translatable="false">CSV</string>
+    <string name="pdf" translatable="false">PDF</string>
+    <string name="create">Create</string>
+    <string name="restore">Restore</string>
+    <string name="restore_failed">Restore failed</string>
+    <string name="backup_failed">Backup failed</string>
+    <string name="export_failed">Export failed</string>
+    <string name="restore_successful">Restore successful</string>
+    <string name="restore_start">This will replace all medicine settings.\n\nContinue?</string>
 </resources>
