--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -79,4 +79,5 @@
     <string name="export_failed">Error de exportación</string>
     <string name="restore_successful">Restaurar con éxito</string>
     <string name="restore_start">Esto reemplazará todos los ajustes de medicina.\n\n¿Continuar?</string>
+    <string name="log_manual_dose">Introducir dosis manual</string>
 </resources>
