--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -91,4 +91,5 @@
     <string name="minutes_30">30 Minuten</string>
     <string name="minutes_60">60 Minuten</string>
     <string name="notification_skip">ÜBERSPRINGEN</string>
+    <string name="notification_snooze">SNOOZE</string>
 </resources>
