--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -89,6 +89,6 @@
     <string name="minutes_15">15 minutos</string>
     <string name="minutes_30">30 minutos</string>
     <string name="minutes_60">60 minutos</string>
-    <string name="notification_skip">OMITIR</string>
+    <string name="notification_skipped">OMITIDO</string>
     <string name="notification_snooze">SNOOZE</string>
 </resources>
