--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,5 @@
     <string name="minutes_60">60 minutes</string>
     <string name="notification_skipped">SKIPPED</string>
     <string name="notification_snooze">SNOOZE</string>
+    <string name="custom">Custom…</string>
 </resources>
