--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -102,4 +102,5 @@
     <string name="saturday">Samstag</string>
     <string name="sunday">Sonntag</string>
     <string name="weekend_mode_summary">Verzögerung von Benachrichtigungen an bestimmten Wochentagen bis zu einer bestimmten Uhrzeit</string>
+    <string name="custom">Benutzerdefiniert…</string>
 </resources>
