--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -101,4 +101,5 @@
     <string name="saturday">Sábado</string>
     <string name="sunday">Domingo</string>
     <string name="weekend_mode_summary">Retrasar las notificaciones de ciertos días de la semana hasta una hora determinada</string>
+    <string name="custom">Personalizado…</string>
 </resources>
