--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
     <string name="weekend_mode_summary">Delay notifications on certain days of the week until a given time</string>
+    <string name="custom">Custom…</string>
 </resources>
