--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -102,4 +102,5 @@
     <string name="sunday">Domingo</string>
     <string name="weekend_mode_summary">Retrasar las notificaciones de ciertos días de la semana hasta una hora determinada</string>
     <string name="custom">Personalizado…</string>
+    <string name="advanced_settings">Opciones avanzadas</string>
 </resources>
