--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -58,7 +58,7 @@
     <string name="create_reminder_dosage_hint">Dosis para el nuevo recordatorio</string>
     <string name="notification_tone_title">Sonido de notificación</string>
     <string name="select_format">Seleccionar formato</string>
-    <string name="remind_every">Recordar cada</string>
+    <string name="remind_cycle_part1">Recordatorio durante</string>
     <string name="days">días</string>
     <string name="theme">Tema</string>
     <string name="default_theme">Estándar</string>
@@ -105,4 +105,6 @@
     <string name="advanced_settings">Opciones avanzadas</string>
     <string name="remind_on">Recordar en</string>
     <string name="every_day">Todos los días</string>
+    <string name="remind_cycle_part2">"días consecutivos, luego pausa de "</string>
+    <string name="remind_cycle_part3">días a partir del</string>
 </resources>
