--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -74,23 +74,23 @@
     <string name="backup_medicine">Backup de los medicamentos</string>
     <string name="create">Crear</string>
     <string name="restore">Restaurar</string>
-    <string name="restore_failed">Error de restauración</string>
-    <string name="backup_failed">Error de creación</string>
-    <string name="export_failed">Error de exportación</string>
-    <string name="restore_successful">Restaurar con éxito</string>
+    <string name="restore_failed">Error al restaurar</string>
+    <string name="backup_failed">Error al crear</string>
+    <string name="export_failed">Error al exportar</string>
+    <string name="restore_successful">Se ha restaurado con éxito</string>
     <string name="restore_start">Esto reemplazará todos los ajustes de medicina.\n\n¿Continuar?</string>
     <string name="log_manual_dose">Introducir dosis manual</string>
     <string name="dismiss_notification_action">Acción al rechazar la notificación</string>
     <string name="skip_reminder">Omitir dosis</string>
-    <string name="snooze">Snooze</string>
-    <string name="snooze_duration">Duración de snooze</string>
+    <string name="snooze">Posponer</string>
+    <string name="snooze_duration">Duración al posponer</string>
     <string name="minutes_5">5 minutos</string>
     <string name="minutes_10">10 minutos</string>
     <string name="minutes_15">15 minutos</string>
     <string name="minutes_30">30 minutos</string>
     <string name="minutes_60">60 minutos</string>
     <string name="notification_skipped">OMITIDO</string>
-    <string name="notification_snooze">SNOOZE</string>
+    <string name="notification_snooze">POSPONER</string>
     <string name="weekend_mode">Modo fin de semana</string>
     <string name="weekend_mode_days">Días</string>
     <string name="monday">Lunes</string>
