German text fix

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -104,7 +104,7 @@
     <string name="custom">Benutzerdefiniert…</string>
     <string name="advanced_settings">Erweiterte Einstellungen</string>
     <string name="remind_on">Erinnere an</string>
-    <string name="every_day">Jeden Tag</string>
+    <string name="every_day">Jedem Tag</string>
     <string name="remind_cycle_part1">Erinnere an</string>
     <string name="remind_cycle_part2">Tagen hintereinander, dann pausiere für</string>
     <string name="remind_cycle_part3">Tage beginnend am</string>
