Text improvement for additional dose

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -79,7 +79,7 @@
     <string name="export_failed">Exportieren fehlgeschlagen</string>
     <string name="restore_successful">Wiederherstellen erfolgreich</string>
     <string name="restore_start">Alle Medikamenteneinstellungen werden überschrieben.\n\nFortfahren?</string>
-    <string name="log_manual_dose">Manuelle Dosis eintragen</string>
+    <string name="log_additional_dose">Zusätzliche Einnahme eintragen</string>
     <string name="dismiss_notification_action">Aktion beim Verwerfen einer Benachrichtigung</string>
     <string name="skip_reminder">Einnahme überspringen</string>
     <string name="snooze">Snooze</string>
