--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -58,7 +58,7 @@
     <string name="create_reminder_dosage_hint">Dosis para el nuevo recordatorio</string>
     <string name="notification_tone_title">Sonido de notificación</string>
     <string name="select_format">Seleccionar formato</string>
-    <string name="remind_every">Recordar cada</string>
+    <string name="remind_cycle_part1">Recordatorio durante</string>
     <string name="days">días</string>
     <string name="theme">Tema</string>
     <string name="default_theme">Estándar</string>
@@ -79,7 +79,7 @@
     <string name="export_failed">Error al exportar</string>
     <string name="restore_successful">Se ha restaurado con éxito</string>
     <string name="restore_start">Esto reemplazará todos los ajustes de medicina.\n\n¿Continuar?</string>
-    <string name="log_manual_dose">Introducir dosis manual</string>
+    <string name="log_additional_dose">Introducir dosis adicional</string>
     <string name="dismiss_notification_action">Acción al rechazar la notificación</string>
     <string name="skip_reminder">Omitir dosis</string>
     <string name="snooze">Posponer</string>
@@ -102,4 +102,9 @@
     <string name="sunday">Domingo</string>
     <string name="weekend_mode_summary">Retrasar las notificaciones de ciertos días de la semana hasta una hora determinada</string>
     <string name="custom">Personalizado…</string>
+    <string name="advanced_settings">Opciones avanzadas</string>
+    <string name="remind_on">Recordar en</string>
+    <string name="every_day">Todos los días</string>
+    <string name="remind_cycle_part2">"días consecutivos, luego pausa de "</string>
+    <string name="remind_cycle_part3">días a partir del</string>
 </resources>
