--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="create_reminder_dosage_hint">Dosage for new reminder</string>
     <string name="notification_tone_title">Notification tone</string>
     <string name="select_format">Select format</string>
-    <string name="remind_every">Remind every</string>
+    <string name="remind_cycle_part1">Remind for</string>
     <string name="days">days</string>
     <string name="theme">Theme</string>
     <string name="default_theme">Default</string>
@@ -83,7 +83,7 @@
     <string name="export_failed">Export failed</string>
     <string name="restore_successful">Restore successful</string>
     <string name="restore_start">This will replace all medicine settings.\n\nContinue?</string>
-    <string name="log_manual_dose">Log manual dose</string>
+    <string name="log_additional_dose">Log additional dose</string>
     <string name="dismiss_notification_action">Action when dismissing notification</string>
     <string name="skip_reminder">Skip dose</string>
     <string name="snooze">Snooze</string>
@@ -106,4 +106,9 @@
     <string name="sunday">Sunday</string>
     <string name="weekend_mode_summary">Delay notifications on certain days of the week until a given time</string>
     <string name="custom">Custom…</string>
+    <string name="advanced_settings">Advanced settings</string>
+    <string name="remind_on">Remind on</string>
+    <string name="every_day">Every day</string>
+    <string name="remind_cycle_part2">consecutive days, then pause for</string>
+    <string name="remind_cycle_part3">days beginning on</string>
 </resources>
