--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -39,7 +39,7 @@
   <string name="export">Evenementen exporteren</string>
   <string name="swipe_left">Veeg naar links</string>
   <string name="long_press">Lang indrukken</string>
-  <string name="delete_items">Artikelen verwijderen</string>
+  <string name="delete_items">Verwijderen</string>
   <string name="actions">Acties</string>
   <string name="information">Informatie</string>
   <string name="show_notifications">Toon meldingen</string>
