--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -18,8 +18,8 @@
   <string name="are_you_sure_delete_medicine">Weet u zeker dat u het geneesmiddel wilt verwijderen?</string>
   <string name="no_reminders">Geen herinneringen ingesteld</string>
   <plurals name="som_herinneringen">
-       <item quantity="een">%1$d herinnering\n%2$s</item>
-       <item quantity="ander">%1$d herinneringen\n%2$s</item>
+       <item quantity="one">%1$d herinnering\n%2$s</item>
+       <item quantity="other">%1$d herinneringen\n%2$s</item>
   </plurals>
   <string name="channel_name" translatable="false">MedTimer</string>
   <string name="channel_description" translatable="false">Meldingen van MedTimer</string>
