--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -105,8 +105,8 @@
     <string name="advanced_settings">Erweiterte Einstellungen</string>
     <string name="remind_on">Erinnere an</string>
     <string name="every_day">Jedem Tag</string>
-    <string name="cycle_consecutive_days">Aufeinanderfolgende Erinnerungstage</string>
-    <string name="cycle_pause_days">Erinnerung Pausetage</string>
+    <string name="cycle_consecutive_days">Tage aktiv</string>
+    <string name="cycle_pause_days">Tage Pause</string>
     <string name="cycle_start_date">Beginn des ersten Zyklus</string>
     <string name="cycle_reminders">Zyklische Erinnerungen</string>
 </resources>
